@@ -1478,6 +1478,8 @@ namespace OpenRCT2
         STR_QUEUE_TIME_MINUTE = 1359,
         STR_QUEUE_TIME_MINUTES = 1360,
         STR_RANDOM_COLOUR = 6501,
+        STR_RANDOMISE_VEHICLE_COLOURS = 6661,
+        STR_RANDOMISE_VEHICLE_COLOURS_TIP = 6662,
         STR_RATING_EXTREME = 2376,
         STR_RATING_HIGH = 2374,
         STR_RATING_LOW = 2372,
